[package]
name = "dwarven-toolbox"
version = "0.1.1"
edition = "2021"

[[ bin ]]
name = "iron"
path = "src/iron.rs"

[[ bin ]]
name = "silver"
path = "src/silver.rs"

[[ bin ]]
name = "gold"
path = "src/gold.rs"

[[ bin ]]
name = "uidgen"
path = "src/uidgen.rs"

[[ bin ]]
name = "armore"
path = "src/armore.rs"

[[ bin ]]
name = "darmore"
path = "src/darmore.rs"

[[ bin ]]
name = "axor"
path = "src/axor.rs"

[[ bin ]]
name = "hxor"
path = "src/hxor.rs"

[[ bin ]]
name = "shielda"
path = "src/shielda.rs"

[[ bin ]]
name = "dshielda"
path = "src/dshielda.rs"

[[ bin ]]
name = "magick"
path = "src/magick.rs"

[[ bin ]]
name = "antimagick"
path = "src/antimagick.rs"

[[ bin ]]
name = "hammeron"
path = "src/hammeron.rs"

[[ bin ]]
name = "hammeroff"
path = "src/hammeroff.rs"

[[ bin ]]
name = "anvil"
path = "src/anvil.rs"

[[ bin ]]
name = "amuleton"
path = "src/amuleton.rs"

[[ bin ]]
name = "amuletoff"
path = "src/amuletoff.rs"

[[ bin ]]
name = "crown"
path = "src/crown.rs"

[dependencies]
uuid = { version = "0.4", features = ["serde", "v4"] }
base64 = "0.21"
bs58 = { version="0.4.0", features=["check"] }
aes = "0.7.5"
hex = "0.4.3"
rand = "0.7"
chacha20poly1305 = { version = "0.10", features = ["stream"] }
zeroize = "1.4"
ed25519-dalek = "1.0.1"
blake3 = "1.4.0"
blake2 = "0.10.6"
sha3 = "0.10.8"
sha2 = "0.10.6"
digest = "0.10.7"
block-modes = "0.8.1"
