[package]
name = "dwarven-toolbox"
version = "0.4.0"
edition = "2021"

[[ bin ]]
name = "iron"
path = "src/iron.rs"

[[ bin ]]
name = "silver"
path = "src/silver.rs"

[[ bin ]]
name = "gold"
path = "src/gold.rs"

[[ bin ]]
name = "uidgen"
path = "src/uidgen.rs"

[[ bin ]]
name = "armore"
path = "src/armore.rs"

[[ bin ]]
name = "darmore"
path = "src/darmore.rs"

[[ bin ]]
name = "axor"
path = "src/axor.rs"

[[ bin ]]
name = "gaxor"
path = "src/gaxor.rs"

[[ bin ]]
name = "hexor"
path = "src/hexor.rs"

[[ bin ]]
name = "swordleft"
path = "src/swordleft.rs"

[[ bin ]]
name = "swordright"
path = "src/swordright.rs"

[[ bin ]]
name = "shielda"
path = "src/shielda.rs"

[[ bin ]]
name = "dshielda"
path = "src/dshielda.rs"

[[ bin ]]
name = "magick"
path = "src/magick.rs"

[[ bin ]]
name = "antimagick"
path = "src/antimagick.rs"

[[ bin ]]
name = "daggeron"
path = "src/daggeron.rs"

[[ bin ]]
name = "daggeroff"
path = "src/daggeroff.rs"

[[ bin ]]
name = "hammeron"
path = "src/hammeron.rs"

[[ bin ]]
name = "hammeroff"
path = "src/hammeroff.rs"

[[ bin ]]
name = "warhammeron"
path = "src/warhammeron.rs"

[[ bin ]]
name = "warhammeroff"
path = "src/warhammeroff.rs"

[[ bin ]]
name = "steelhammeron"
path = "src/steelhammeron.rs"

[[ bin ]]
name = "steelhammeroff"
path = "src/steelhammeroff.rs"

[[ bin ]]
name = "anvil"
path = "src/anvil.rs"

[[ bin ]]
name = "aegis"
path = "src/aegis.rs"

[[ bin ]]
name = "amuleton"
path = "src/amuleton.rs"

[[ bin ]]
name = "amuletoff"
path = "src/amuletoff.rs"

[[ bin ]]
name = "crown"
path = "src/crown.rs"

[[ bin ]]
name = "crossbow"
path = "src/crossbow.rs"

[[ bin ]]
name = "ballista"
path = "src/ballista.rs"

[[ bin ]]
name = "saw"
path = "src/saw.rs"

[[ bin ]]
name = "catapult"
path ="src/catapult.rs"

[[ bin ]]
name = "trebuchet"
path ="src/trebuchet.rs"

[[ bin ]]
name = "axe"
path ="src/axe.rs"

[[ bin ]]
name = "greataxe"
path ="src/greataxe.rs"

[[ bin ]]
name = "stack"
path ="src/stack.rs"

[[ bin ]]
name = "pile"
path ="src/pile.rs"

[[ bin ]]
name = "smash"
path ="src/smash.rs"

[[ bin ]]
name = "crush"
path ="src/crush.rs"

[[ bin ]]
name = "scale"
path = "src/scale.rs"

[[ bin ]]
name = "box"
path = "src/box.rs"

[[ bin ]]
name = "unbox"
path = "src/unbox.rs"

[[ bin ]]
name = "zbox"
path = "src/zbox.rs"

[[ bin ]]
name = "zunbox"
path = "src/zunbox.rs"

[[ bin ]]
name = "mattockon"
path = "src/mattockon.rs"

[[ bin ]]
name = "mattockoff"
path = "src/mattockoff.rs"

[[ bin ]]
name = "halberdon"
path = "src/halberdon.rs"

[[ bin ]]
name = "halberdoff"
path = "src/halberdoff.rs"

[[ bin ]]
name = "helmet"
path = "src/helmet.rs"

[[ bin ]]
name = "greathelmet"
path = "src/greathelmet.rs"

[[ bin ]]
name = "flip"
path = "src/flip.rs"

[[ bin ]]
name = "chop"
path = "src/chop.rs"

[[ bin ]]
name = "shave"
path = "src/shave.rs

[[ bin ]]
name = "rip"
path = "src/rip.rs"

[[ bin ]]
name = "pop"
path = "src/pop.rs"

[[ bin ]]
name = "order"
path = "src/order.rs"

[[ bin ]]
name = "seek"
path = "src/seek.rs"

[[ bin ]]
name = "inspect"
path = "src/inspect.rs"

[[ bin ]]
name = "review"
path = "src/review.rs"

[[ bin ]]
name = "chk"
path = "src/chk.rs"

[[ bin ]]
name = "makesigil"
path = "src/makesigil.rs"

[[ bin ]]
name = "makerune"
path = "src/makerune.rs"

[[ bin ]]
name = "readrune"
path = "src/readrune.rs"

[[ bin ]]
name = "chiselon"
path = "src/chiselon.rs"

[[ bin ]]
name = "chiseloff"
path = "src/chiseloff.rs"

[[ bin ]]
name = "forgeon"
path = "src/forgeon.rs"

[[ bin ]]
name = "forgeoff"
path = "src/forgeoff.rs"

[[ bin ]]
name = "steelforgeon"
path = "src/steelforgeon.rs"

[[ bin ]]
name = "steelforgeoff"
path = "src/steelforgeoff.rs"

[[ bin ]]
name = "hexon"
path = "src/hexon.rs"

[[ bin ]]
name = "hexoff"
path = "src/hexoff.rs"

[[ bin ]]
name = "clean"
path = "src/clean.rs"

[[ bin ]]
name = "toggle"
path = "src/toggle.rs"

[[ bin ]]
name = "pack"
path = "src/pack.rs"

[[ bin ]]
name = "zpack"
path = "src/zpack.rs"

[[ bin ]]
name = "armor"
path = "src/armor.rs"

[[ bin ]]
name = "shield"
path = "src/shield.rs"

[[ bin ]]
name = "hex"
path = "src/hex.rs"

[[ bin ]]
name = "forge"
path = "src/forge.rs"

[[ bin ]]
name = "ore"
path = "src/ore.rs"

[dependencies]
uuid = { version = "0.4", features = ["serde", "v4"] }
base64 = "0.21"
bs58 = { version="0.4.0", features=["check"] }
aes = "0.7.5"
hex = "0.4.3"
rand = "0.7"
chacha20poly1305 = { version = "0.10", features = ["stream"] }
zeroize = "1.4"
ed25519-dalek = "1.0.1"
blake3 = "1.4.0"
blake2 = "0.10.6"
sha3 = "0.10.8"
sha2 = "0.10.6"
digest = "0.10.7"
block-modes = "0.8.1"
flate2 = { version = "1.0", features = ["zlib-ng"] }
num = "0.4.0"
num-traits = "0.2"
num-bigint = "0.4"
hkdf = "0.12"
pbkdf2 = "0.12.2"
chrono = "0.4.26"
users = "0.11.0"
rpassword = "7.2.0"
argon2 = "0.5.1"
atty = "0.2"
aes-gcm-siv = "0.11.1"
